--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 *.properties
-application.properties
+
 ### STS ###
 .apt_generated
 .classpath
@@ -19,7 +19,8 @@ application.properties
 *.iws
 *.iml
 *.ipr
-
+application.properties
+D:\SpringBoot\Application\SpringBoot_CRUDOperationsAPI\src\main\resources\application.properties
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
