--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ target/
 application.properties
 SpringBoot_CRUDOperationsAPI\src\main\resources\application.properties
 *.properties
+application.properties
+SpringBoot_CRUDOperationsAPI\src\main\resources\application.properties
+*.properties
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
