--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=SpringBoot_CRUDOperationsAPI
 
 //Database connection
-spring.datasource.url =jdbc:mysql://localhost:3306/company_DB
-spring.datasource.username = root
-spring.datasource.password = root1
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver;
+spring.datasource.url=jdbc:mysql://localhost:3306/company_db
+spring.datasource.username=root
+spring.datasource.password=root1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
